# gemini-chat-exporter

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROMPTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
gemini_export/: __init__.py  cli.py  config.py  convert.py  menu.py  models.py  parsers.py  reconcile.py  takeout.py  verify.py
tests/: conftest.py  test_cli.py  test_config.py  test_convert.py  test_models.py  test_parsers.py  test_reconcile.py  test_takeout.py  test_verify.py
tests/fixtures/: clean_sample.txt  corrupted_sample.txt  takeout_conversations.json  takeout_myactivity.json
userscript/: README.md  console-snippet.js  gemini-chat-exporter.user.js
