[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-chat-exporter"
version = "0.1.2"
description = "Export & back up Google Gemini chat history to JSON + Markdown, with a corruption verifier"
readme = "README.md"
license = "MIT"
authors = [{ name = "David Malko", email = "davidmalko87@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "gemini",
    "google-gemini",
    "chat-export",
    "backup",
    "google-takeout",
    "markdown",
    "json",
    "userscript",
]
dependencies = [
    "python-dotenv>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/davidmalko87/gemini-chat-exporter"
Repository = "https://github.com/davidmalko87/gemini-chat-exporter"
Changelog = "https://github.com/davidmalko87/gemini-chat-exporter/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/davidmalko87/gemini-chat-exporter/issues"

[project.scripts]
gemini-export = "gemini_export.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools]
packages = ["gemini_export"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
